made the microsite responsive with different width sizes in the media queries on the body tag. Fixed a bug in my navigation and made the hamburger link on mobile a little bit bigger in my css

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,14 @@
     font-style: normal;
 
 }
+header, section, footer, aside, nav, article, figure, figcaption {
+  display: block;
+}
 
 html, body {
   background: white;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
 /* Heading
@@ -31,7 +36,7 @@ html, body {
   color: #E36822;
   text-align: center;
   font-family: 'nasalization', 'Arial', 'sans-serif';
-  font-size: 60px;
+  font-size: 50px;
 }
 .main-heading a:link{
   color: white;
@@ -246,11 +251,10 @@ p {
 -------------------*/
 header {
   background: black;
+  height: 160px;
 }
 .menu {
-  width: 5%;
-  color: white;
-  float: right;
+  visibility: hidden;
 }
 footer a {
   color: white;
@@ -272,20 +276,25 @@ footer a:hover {
 
 /*  Nav -bar
 -------------*/
-nav a {
+nav ul {
+}
+nav li {
+  display: inline;
+}
+nav li a {
   text-decoration: none;
   font-size: 35px;
-  padding: 14px 16px;
   float: left;
-  margin-left: 8%;
+  padding: 14px 16px;
+  margin-left: 7%;
 }
-nav a:link{
+nav li a:link{
   color: black;
 }
-nav a:visited {
+nav li a:visited {
   color: #7F7967 ;
 }
-nav a:hover {
+nav li a:hover {
   color: #E36822;
 }
 
@@ -472,6 +481,9 @@ article {
 .container_2_missions, .container_3_missions, .container_4_missions, .container_5_missions  {
   flex-direction: column;
 }
+body {
+  width: 400px;
+}
 .container_rovers {
   visibility: hidden;
 }
@@ -548,7 +560,7 @@ button {
 .search {
   visibility: hidden;
 }
-.navigation a {
+nav li a {
   visibility: hidden;
 }
 p {
@@ -562,6 +574,12 @@ figcaption {
 }
 .blockquote {
   visibility: hidden;
+}
+.menu {
+  visibility: visible;
+  width: 15%;
+  color: white;
+  float: right;
 }
 
 /*  Images
@@ -585,11 +603,14 @@ figcaption {
 
 
 /*tablet styles*/
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 481px) and (max-width: 768px) {
 .container_1, .container_2, .container_1_launches, .container_2_launches,
 .container_3_launches, .container_1_contact, .container_1_missions,
 .container_2_missions, .container_3_missions, .container_4_missions, .container_5_missions  {
     flex-direction: column;
+}
+body {
+  width: 100%;
 }
 
 /*  Video
@@ -672,9 +693,9 @@ figcaption {
   margin-right: auto;
   max-width: 100%;
 }
-nav a {
-  margin-left: 7px;
-  padding: 12px 23px;
+nav li a {
+  padding: 0px 5px;
+  margin: 5px auto;
   font-size: 30px;
 }
 .menu {
@@ -683,11 +704,19 @@ nav a {
 .artemis {
   width: 95%;
 }
+.main-heading {
+  font-size: 35px;
+  visibility: visible;
+}
 }
 
 
 /*desktop styles*/
-@media only screen and (max-width:1024px) {
-
+@media only screen and (min-width:769px) {
+body {
+  max-width: 100%;
+}
+.menu {
+  visibility: hidden;
 }
 }
